Resolve warnings and attempted mobile width fixes

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,5 +5,6 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-bg);
-  min-width: 800px;
+  max-width: 100%;
+  min-width: 0;
 }
