--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -12,6 +12,8 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   user-select: none;
   z-index: 1000;
+  max-width: 100%;
+  min-width: 0;
 }
 
 /* Logo styling */
@@ -139,11 +141,9 @@
   .options {
     flex-direction: column;
     align-items: stretch;
-    width: 100%;
   }
 
   .option {
-    width: 100%;
     justify-content: space-between;
   }
 
