--- a/src/css/TreeTabWrapper.css
+++ b/src/css/TreeTabWrapper.css
@@ -10,7 +10,8 @@
   padding: 0 20px 20px 20px;
   display: flex;
   flex-direction: column;
-  width: 90%;
+  max-width: 100%;
+  min-width: 0;
 }
 
 .tabs-header {
@@ -55,5 +56,6 @@
   min-height: 200px;
   box-shadow: inset 0 0 5px var(--color-shadow-dark);
   margin-top: -2px;
-    min-width: 800px;
+  max-width: 100%;
+  min-width: 0;
 }
