--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,4 +7,5 @@
   background-color: var(--color-bg);
   max-width: 100%;
   min-width: 0;
+  transition: background-color var(--transition-speed) ease;
 }
