--- a/src/css/RootStyles.css
+++ b/src/css/RootStyles.css
@@ -102,8 +102,8 @@ html, body {
   background-color: var(--color-bg);
   color: var(--color-text);
   font-family: var(--font-family);
-  transition: background-color var(--transition-speed) ease,
-              color var(--transition-speed) ease;
+  transition: background-color var(--transition-speed) ease, var(--transition-speed) ease,
+              color var(--transition-speed) var(--transition-speed) ease;
   height: 100%;
   min-height: 100vh;
    overflow-x: hidden; /* prevent side gap/scrollbar */ 
@@ -112,9 +112,9 @@ html, body {
 /* Buttons base */
 button {
   font-family: var(--font-family);
-  transition: background-color var(--transition-speed),
-              color var(--transition-speed),
-              box-shadow var(--transition-speed);
+  transition: background-color var(--transition-speed) var(--transition-speed) ease,
+              color var(--transition-speed) var(--transition-speed)ease ,
+              box-shadow var(--transition-speed) var(--transition-speed) ease;
   border-radius: var(--border-radius);
   border: none;
   cursor: pointer;
